--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,35 +12,17 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
       
-    <%# <label class="switch">
-      <div class="wrapper">
-        <div class="toggle">
-          <input class="toggle-input" type="checkbox"/>
-          <div class="toggle-bg"></div>
-          <div class="toggle-switch">
-            <div class="toggle-switch-figure"></div>
-            <div class="toggle-switch-figureAlt"></div>
-          </div>
-        </div>
-      </div>
-    </label> %>
+    <input type="checkbox" id="toggle-mode-cb" />
+
+<div id="mode-wrapper">
+  <label id="toggle-mode" for="toggle-mode-cb">
+    <span class="toggle-border">
+      <span class="toggle-indicator"></span>
+    </span>
+  </label>
 
   
-  <div class="toggle">
-	<div class="mask">
-		<div class="icon-wrap active">
-			<div class="icon sun"></div>
-		</div>
-		<div class="icon-wrap">
-			<svg copy="icon" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300"><path d="M187.73 151.4c0-55.24 29.34-104.19 76.27-129.72C242.21 9.81 216.56 3 188.15 3 99.15 3 36.2 70.46 36.2 151.4S98.3 299 187.33 299c28.26 0 53.87-6.82 75.69-18.69-46.48-25.31-75.29-73.8-75.29-128.91z" fill="#283445"/></svg>
-		</div>
-	</div>
-	<div class="bar"></div>
-</div>
-<div class="page-content">
-</div>
-      
-
       <%= yield %>
+      </div>
   </body>
 </html>
