css for dark mode

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,15 @@
 
 <div id="mode-wrapper">
   <label id="toggle-mode" for="toggle-mode-cb">
+
+  <!-- toggle bar ------------>
     <span class="toggle-border">
-      <span class="toggle-indicator"></span>
-    </span>
+      <span class="toggle-indicator">
+
+  </span>
+   
+
+ </span>
   </label>
 
   
