--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,29 +20,28 @@
 
 #toggle-mode {
   position: absolute;
-  top: 0;
+  top: 4rem;
   right: 0;
   padding: 20px;
+	
 }
-#toggle-mode .toggle-border {
-  border: 1px solid #1e1f26;
-  width: 50px;
-  height: 20px;
-  display: block;
-  border-radius: 20px;
-  position: relative;
-}
+
 #toggle-mode .toggle-indicator {
   width: 16px;
   height: 16px;
   border-radius: 50%;
   position: absolute;
-  background-color: #1e1f26;
+
   top: 1px;
   left: 2px;
   transition: all 0.3s ease-in-out;
   overflow: hidden;
   box-sizing: border-box;
+	width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  box-shadow: inset 16px 0px #777, inset 16px 0px 1px 2px #777;
+  -moz-box-shadow: inset 16px 0px #777, inset 16px 0px 1px 2px #777;
 }
 #toggle-mode .toggle-indicator::after {
   content: "";
@@ -53,6 +52,20 @@
   bottom: -2px;
   right: 5px;
   background-color: #1e1f26;
+	transform: translatey(60px);
+	
+}
+#toggle-mode .toggle-indicator .active::after {
+  content: "";
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  position: absolute;
+  bottom: -2px;
+  right: 5px;
+  background-color: #1e1f26;
+	transform: translatey(-60px);
+	
 }
 
 #mode-wrapper {
@@ -91,11 +104,23 @@
 #toggle-mode-cb:checked + #mode-wrapper .mode__dark {
   opacity: 1;
 }
-#toggle-mode-cb:checked + #mode-wrapper .toggle-border {
-  border-color: white;
+
+#toggle-mode-cb:checked + #mode-wrapper .toggle-indicator .active{
+  transform: translatey(-60px);
+	background-color: white;
+	width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  box-shadow: inset 16px 0px white, inset 16px 0px 1px 2px white;
+  -moz-box-shadow: inset 16px 0px white, inset 16px 0px 1px 2px white;
 }
+
 #toggle-mode-cb:checked + #mode-wrapper .toggle-indicator {
-  background-color: white;
-  left: calc( 50px - 18px );
-  transform: rotate(180deg);
+  transform: translatey(60px);
+	background-color: white;
+	width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  box-shadow: inset 16px 0px #1e1f26, inset 16px 0px 1px 2px #1e1f26;
+  -moz-box-shadow: inset 16px 0px #1e1f26, inset 16px 0px 1px 2px #1e1f26;
 }
