--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@
 #toggle-mode {
   position: absolute;
   top: 4rem;
-  right: 0;
+  left: 5px;
   padding: 20px;
 	
 }
@@ -121,6 +121,5 @@
 	width: 50px;
   height: 50px;
   border-radius: 50%;
-  box-shadow: inset 16px 0px #1e1f26, inset 16px 0px 1px 2px #1e1f26;
-  -moz-box-shadow: inset 16px 0px #1e1f26, inset 16px 0px 1px 2px #1e1f26;
+  
 }
