--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -84,7 +84,7 @@
 
         <!--- Sign up form --->
         <div class="tab-pane fade" id="signup">
-         <div class="form-horizontal">
+         <form class="form-horizontal">
           <fieldset>
           <!-- add falsh message-->
           
@@ -93,7 +93,7 @@
             <input type="file" name="avatar" id="avatarInput" class="input" />
             <label for="avatar" class="label">Upload Photo</label>
             </div> %>
-          
+
             <div class="group">
               <input id="nameInput" class="input" name="Name" required/>
               <span class="highlight"></span>
@@ -116,7 +116,7 @@
             </div>
 
             <div class="group">
-            <input type="password" id ="passwordInput" class="input" required />
+            <input type="password" id ="passwordInput" class="input" required autocomplete="current-password" />
               <span class="highlight"></span>
               <span class="bar"></span>
               <label for="password" class="label">Password</label>
@@ -137,7 +137,7 @@
               </div>
             </div>
           </fieldset>
-       </div>
+       </form>
       </div>
     </div>
   </div>
