--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,118 +14,101 @@
  *= require_self
  */
 
- #toggle-mode-cb {
-  display: none;
+@import url("https://fonts.googleapis.com/css?family=Nanum+Gothic|Nanum+Myeongjo");
+body {
+  transition: all 300ms ease;
+}
+body.dark {
+  background-color: #161D26;
 }
 
-#toggle-mode {
-  position: absolute;
-  top: 4rem;
-  left: 5px;
-  padding: 20px;
-	
+.toggle {
+  position: fixed;
+  top: 20%;
+  left: 0;
+  width: 60px;
 }
-
-// toggle in light mode/ default 
-#toggle-mode .toggle-indicator {
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  position: absolute;
-
-  top: 1px;
-  left: 2px;
-  transition: all 0.3s ease-in-out;
+.toggle .mask {
+  width: 60px;
+  height: 60px;
   overflow: hidden;
-  box-sizing: border-box;
-	width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  box-shadow: inset 16px 0px #777, inset 16px 0px 1px 2px #777;
-  -moz-box-shadow: inset 16px 0px #777, inset 16px 0px 1px 2px #777;
 }
-
-
-// toggle in light mode after click
-#toggle-mode .toggle-indicator::after {
-  content: "";
-  width: 14px;
-  height: 14px;
-  border-radius: 50%;
-  position: absolute;
-  bottom: -2px;
-  right: 5px;
-  background-color: #1e1f26;
-	transform: translatey(60px);
-	
+.toggle .mask .icon-wrap {
+  padding: 15px;
+  transition: all 300ms 400ms ease;
 }
-
-// toggle in dark mode 
-#toggle-mode .toggle-indicator .active::after {
-  content: "";
-  width: 14px;
-  height: 14px;
-  border-radius: 50%;
-  position: absolute;
-  bottom: -2px;
-  right: 5px;
-  background-color: #1e1f26;
-	transform: translatey(-60px);
-	
-}
-
-#mode-wrapper {
-  transition: all 0.3s ease-in-out;
-  height: 100vh;
-  position: relative;
-  font-family: sans-serif;
-  font-size: 2rem;
-}
-#mode-wrapper .mode {
-  transition: all 0.3s ease-in-out;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-#mode-wrapper {
-  background-color: white;
-  color: #1e1f26;
-}
-#mode-wrapper .mode__light {
-  opacity: 1;
-}
-#mode-wrapper .mode__dark {
-  opacity: 0;
-}
-
-#toggle-mode-cb:checked + #mode-wrapper {
-  background-color: #1e1f26;
-  color: gray;
-}
-#toggle-mode-cb:checked + #mode-wrapper .mode__light {
-  opacity: 0;
-}
-#toggle-mode-cb:checked + #mode-wrapper .mode__dark {
-  opacity: 1;
-}
-
-#toggle-mode-cb:checked + #mode-wrapper .toggle-indicator {
+.toggle .mask .icon-wrap:last-child {
   transform: translatey(-60px);
-	background-color: white;
-	width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  box-shadow: inset 16px 0px white, inset 16px 0px 1px 2px white;
-  -moz-box-shadow: inset 16px 0px white, inset 16px 0px 1px 2px white;
 }
 
-#toggle-mode-cb:checked + #mode-wrapper .toggle-indicator .active {
-  transform: translatey(60px);
-	background-color: white;
-	width: 50px;
-  height: 50px;
+.toggle .mask .icon-wrap-moon {
+  padding: 15px;
+  transition: all 300ms 400ms ease;
+}
+.toggle .mask .icon-wrap-moon:last-child {
+  transform: translatey(-60px);
+}
+
+.toggle .mask .icon {
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
-  
+}
+.toggle .mask .active {
+  transition-delay: 100ms;
+}
+.toggle .mask .active:first-child {
+  transform: translatey(60px);
+}
+.toggle .mask .active:last-child {
+  transform: translatey(0);
+}
+.toggle .mask .sun {
+  background-color: #fff;
+}
+.toggle .mask .moon {
+  background-color: #283445;
+}
+.toggle .bar {
+  width: 40%;
+  height: 5px;
+  margin: 0 auto;
+  background-color: #283445;
+  transition: all 300ms 100ms ease;
+}
+.toggle .bar.dark {
+  background-color: #fff;
+}
+
+.page-content {
+  max-width: 888px;
+  margin: 60px auto;
+  padding: 60px;
+}
+.page-content h1, .page-content p {
+  transition: all 300ms ease;
+}
+.page-content h1 {
+  font-family: "Nanum Myeongjo", serif;
+  padding: 45px 0;
+  font-size: 3.5em;
+}
+.page-content p {
+  font-family: "Nanum Gothic", sans-serif;
+  padding: 0 0 30px 0;
+  font-size: 1em;
+  line-height: 2em;
+}
+.page-content .hero {
+  width: 100%;
+  height: 550px;
+  background-image: url("https://images.unsplash.com/photo-1520545221203-f6ca6a8e3252?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=c31c8f886e5b75e9eb1a12c180c1f0ff");
+  background-size: cover;
+}
+
+.dark .hero {
+  background-image: url("https://images.unsplash.com/photo-1514933651103-005eec06c04b?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=3cb3ba03a83bbf2690315283e9cd4115");
+}
+.dark h1, .dark p {
+  color: #fff;
 }
