--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class=“light”>
+<html>
   <head>
     <title>Acebook</title>
     <%= csrf_meta_tags %>
@@ -12,23 +12,37 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
       
-    <input type="checkbox" id="toggle-mode-cb" />
+    <%# <input type="checkbox" id="toggle-mode-cb" /> %>
 
-<div id="mode-wrapper">
-  <label id="toggle-mode" for="toggle-mode-cb">
+
+  <%# <label id="toggle-mode" for="toggle-mode-cb">
 
   <!-- toggle bar ------------>
     <span class="toggle-border">
       <span class="toggle-indicator">
-
+<div class="bar"></div>
   </span>
    
 
  </span>
-  </label>
+  </label> %>
 
-  
+  <div class="toggle">
+	<div class="mask">
+		<div class="icon-wrap active">
+			<div class="icon sun"></div>
+		</div>
+		<div class="icon-wrap-moon">
+			<svg copy="icon" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300"><path d="M187.73 151.4c0-55.24 29.34-104.19 76.27-129.72C242.21 9.81 216.56 3 188.15 3 99.15 3 36.2 70.46 36.2 151.4S98.3 299 187.33 299c28.26 0 53.87-6.82 75.69-18.69-46.48-25.31-75.29-73.8-75.29-128.91z" fill="#283445"/></svg>
+		</div>
+	</div>
+	<div class="bar"></div>
+  </div>
+  <div class="page-content">
+
       <%= yield %>
+      
       </div>
+     
   </body>
 </html>
